--- a/src/components/Modals/HelpModal.css
+++ b/src/components/Modals/HelpModal.css
@@ -15,6 +15,7 @@ dialog::backdrop {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    letter-spacing: 0.1em;
 }
 
 .modal-container > button {
